funkcni verze s upravami + WIP

--- a/src/main/resources/templates/game_filled.html
+++ b/src/main/resources/templates/game_filled.html
@@ -44,15 +44,15 @@
                             <td th:text="${game.date}"></td>
                             <td th:text="${game.home_team}"></td>
                             <td th:text="${game.guest_team}"></td>
-                            <td th:text="${game.vysledek}"></td>
+                            <td class="table-warning" th:text="${game.vysledek}"></td>
                             <td th:text="${game.vysledek_sazka}"></td>
-                            <td th:text="${game.tretina1vysledek}"></td>
+                            <td class="table-warning" th:text="${game.tretina1vysledek}"></td>
                             <td th:text="${game.tretina1sazka}"></td>
-                            <td th:text="${game.tretina2vysledek}"></td>
+                            <td class="table-warning" th:text="${game.tretina2vysledek}"></td>
                             <td th:text="${game.tretina2sazka}"></td>
-                            <td th:text="${game.tretina3vysledek}"></td>
+                            <td class="table-warning" th:text="${game.tretina3vysledek}"></td>
                             <td th:text="${game.tretina3sazka}"></td>
-                            <td th:text="${game.prodlouzeni4vysledek}"></td>
+                            <td class="table-warning" th:text="${game.prodlouzeni4vysledek}"></td>
                             <td th:text="${game.prodlouzeni4sazka}"></td>
                         </tr>
                     </tbody>
