--- a/src/main/resources/templates/game_fill.html
+++ b/src/main/resources/templates/game_fill.html
@@ -38,9 +38,9 @@
                     <tr>
                         <td th:text="${game.id}"></td>
                         <td th:text="${game.date}"></td>
-                        <td><a type="button" class="btn btn-outline-primary btn-sm" th:href="@{'http://localhost:8080/player_registration/'+${game.id}+'h'}" role="button">Hráč+</a></td>
+                        <td><a type="button" class="btn btn-outline-primary btn-sm" th:href="@{'http://localhost:8080/team_all_players_for_season/'+${game.season}+'/'+${game.home}+'/'+${game.id}}"  role="button">Hráč+</a></td>
                         <td class="h5 text-primary" th:text="${game.home_team}"></td>
-                        <td><a type="button" class="btn btn-outline-danger btn-sm" th:href="@{'http://localhost:8080/player_registration/'+${game.id}+'g'}" role="button">Hráč+</a></td>
+                        <td><a type="button" class="btn btn-outline-danger btn-sm" th:href="@{'http://localhost:8080/team_all_players_for_season/'+${game.season}+'/'+${game.guest}+'/'+${game.id}}"  role="button">Hráč+</a></td>
                         <td class="h5 text-danger" th:text="${game.guest_team}"></td>
                     </tr>
                     </tbody>
@@ -51,98 +51,102 @@
 
     <div class="container col-10"><br></div>
 
-    <div class="container col-10">
-        <div class="row col-12">
-            <form  class="col-6" method="post" action="#" th:action="@{'http://localhost:8080/game_fill/'+${game.id}}" th:object="${goal}">
-                <table class="table col-5">
-                    <thead class="table-primary">
-                        <tr>
-                            <th scope="col">minute</th>
-                            <th scope="col">author</th>
-                            <th scope="col">assistance 1</th>
-                            <th scope="col">assistance 2</th>
-                            <th scope="col"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="col-1">
-                                <input type="text" class="form-control-sm form-control" th:field="*{minute}" />
-                            </td>
-                            <td class="col-1">
-                                <select class="form-select" th:field="*{author}" >
-                                    <option selected th:value="@{-1}"></option>
-                                    <option th:each="player : ${home_players}" th:value="${player.id}" th:text="${player.name}"></option>
-                                </select>
-                            </td>
-                            <td class="col-1">
-                                <select class="form-select" th:field="*{assistance1}">
-                                    <option selected th:value="@{-1}"></option>
-                                    <option th:each="player : ${home_players}" th:value="${player.id}" th:text="${player.name}"></option>
-                                </select>
-                            </td>
-                            <td class="col-1">
-                                <select class="form-select" th:field="*{assistance2}">
-                                    <option selected th:value="@{-1}"></option>
-                                    <option th:each="player : ${home_players}" th:value="${player.id}" th:text="${player.name}"></option>
-                                </select>
-                            </td>
-                            <td class="col-1">
-                                <button class="btn btn-primary btn-sm" type="submit">Uložit</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </form>
+    <div class="container col-12">
+        <div class="row justify-content-center">
+            <div class="col">
+                <form method="post" action="#" th:action="@{'http://localhost:8080/game_fill/'+${game.id}}" th:object="${goal}">
+                    <table class="table">
+                        <thead class="table-primary">
+                            <tr>
+                                <th scope="col">minute</th>
+                                <th scope="col">author</th>
+                                <th scope="col">assistance 1</th>
+                                <th scope="col">assistance 2</th>
+                                <th scope="col"> </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-1">
+                                    <input type="text" class="form-control-sm form-control" th:field="*{minute}" />
+                                </td>
+                                <td class="col-1">
+                                    <select class="form-select" th:field="*{author}" >
+                                        <option selected th:value="@{-1}"></option>
+                                        <option th:each="player : ${home_players}" th:value="${player.id}" th:text="${player.name}"></option>
+                                    </select>
+                                </td>
+                                <td class="col-1">
+                                    <select class="form-select" th:field="*{assistance1}">
+                                        <option selected th:value="@{-1}"></option>
+                                        <option th:each="player : ${home_players}" th:value="${player.id}" th:text="${player.name}"></option>
+                                    </select>
+                                </td>
+                                <td class="col-1">
+                                    <select class="form-select" th:field="*{assistance2}">
+                                        <option selected th:value="@{-1}"></option>
+                                        <option th:each="player : ${home_players}" th:value="${player.id}" th:text="${player.name}"></option>
+                                    </select>
+                                </td>
+                                <td class="col-1">
+                                    <button class="btn btn-primary btn-sm" type="submit">Uložit</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </form>
+            </div>
 
-            <form class="col-6" method="post" action="#" th:action="@{'http://localhost:8080/game_fill/'+${game.id}}" th:object="${goal}">
-                <table class="table col-5">
-                    <thead class="table-danger">
-                        <tr>
-                            <th scope="col">minute</th>
-                            <th scope="col">author</th>
-                            <th scope="col">assistance 1</th>
-                            <th scope="col">assistance 2</th>
-                            <th scope="col"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="col-1">
-                                <input type="text" class="form-control form-control-sm" th:field="*{minute}" />
-                            </td>
-                            <td class="col-1">
-                                <select class="form-select" th:field="*{author}" >
-                                    <option selected th:value="@{-1}"></option>
-                                    <option th:each="player : ${guest_players}" th:value="${player.id}" th:text="${player.name}"></option>
-                                </select>
-                            </td>
-                            <td class="col-1">
-                                <select class="form-select" th:field="*{assistance1}">
-                                    <option selected th:value="@{-1}"></option>
-                                    <option th:each="player : ${guest_players}" th:value="${player.id}" th:text="${player.name}"></option>
-                                </select>
-                            </td>
-                            <td class="col-1">
-                                <select class="form-select" th:field="*{assistance2}">
-                                    <option selected th:value="@{-1}"></option>
-                                    <option th:each="player : ${guest_players}" th:value="${player.id}" th:text="${player.name}"></option>
-                                </select>
-                            </td>
-                            <td class="col-1">
-                                <button class="btn btn-danger btn-sm" type="submit">Uložit</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </form>
+            <div class="col">
+                <form method="post" action="#" th:action="@{'http://localhost:8080/game_fill/'+${game.id}}" th:object="${goal}">
+                    <table class="table">
+                        <thead class="table-danger">
+                            <tr>
+                                <th scope="col">minute</th>
+                                <th scope="col">author</th>
+                                <th scope="col">assistance 1</th>
+                                <th scope="col">assistance 2</th>
+                                <th scope="col"> </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-1">
+                                    <input type="text" class="form-control form-control-sm" th:field="*{minute}" />
+                                </td>
+                                <td class="col-1">
+                                    <select class="form-select" th:field="*{author}" >
+                                        <option selected th:value="@{-1}"></option>
+                                        <option th:each="player : ${guest_players}" th:value="${player.id}" th:text="${player.name}"></option>
+                                    </select>
+                                </td>
+                                <td class="col-1">
+                                    <select class="form-select" th:field="*{assistance1}">
+                                        <option selected th:value="@{-1}"></option>
+                                        <option th:each="player : ${guest_players}" th:value="${player.id}" th:text="${player.name}"></option>
+                                    </select>
+                                </td>
+                                <td class="col-1">
+                                    <select class="form-select" th:field="*{assistance2}">
+                                        <option selected th:value="@{-1}"></option>
+                                        <option th:each="player : ${guest_players}" th:value="${player.id}" th:text="${player.name}"></option>
+                                    </select>
+                                </td>
+                                <td class="col-1">
+                                    <button class="btn btn-danger btn-sm" type="submit">Uložit</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </form>
+            </div>
         </div>
     </div>
 
     </br></br>
     <div class="container col-10">
         <div class="row">
-            <div class="col-6">
+            <div class="col-10">
                 <h4>Game - goals</h4>
                 <table class="table table-striped">
                     <thead>
