--- a/src/main/resources/templates/game_fill.html
+++ b/src/main/resources/templates/game_fill.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container col-10"><br></div>
 
-    <div class="container col-10">
+    <div class="container col-11">
         <div class="row row-cols">
             <div class="col" align="right">
                 <table class="table table-striped">
@@ -32,6 +32,7 @@
                         <th scope="col" class="col-3">domácí</th>
                         <th scope="col" class="col-1"></th>
                         <th scope="col" class="col-3">hosté</th>
+                        <th scope="col" class="col-1">score</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -42,6 +43,7 @@
                         <td class="h5 text-primary" th:text="${game.home_team}"></td>
                         <td><a type="button" class="btn btn-outline-danger btn-sm" th:href="@{'http://localhost:8080/team_all_players_for_season/'+${game.season}+'/'+${game.guest}+'/'+${game.id}}"  role="button">Hráč+</a></td>
                         <td class="h5 text-danger" th:text="${game.guest_team}"></td>
+                        <td th:text="${prubeznyVysledek}"></td>
                     </tr>
                     </tbody>
                 </table>
@@ -148,7 +150,7 @@
         <div class="row">
             <div class="col-10">
                 <h4>Game - goals</h4>
-                <table class="table table-striped">
+                <table class="table table-striped table-hover">
                     <thead>
                         <tr>
                             <th scope="col">minute</th>
@@ -156,6 +158,7 @@
                             <th scope="col">assistance1</th>
                             <th scope="col">assistance2</th>
                             <th scope="col">team</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -167,6 +170,9 @@
                             <td th:text="${goal.team_name}"></td>
                             <td>
                                 <a class="btn btn-sm btn-outline-danger" th:href="@{'http://localhost:8080/game_fill/'+${game.id}+'/'+${goal.id}}" role="button">DEL</a>
+                            </td>
+                            <td th:if="${goal.id == lastGoalId}" class="table-success">
+                                <span th:if="${goal.id == lastGoalId}"></span>
                             </td>
                         </tr>
                     </tbody>
