AllSeriesRepository WIP - přidány funkce na počítání kdo dá první gól v zápase

--- a/src/main/resources/templates/analytic_game_series.html
+++ b/src/main/resources/templates/analytic_game_series.html
@@ -64,6 +64,7 @@
                                         <option>second_game</option>
                                         <option>third_game</option>
                                         <option>fourth_game</option>
+                                        <option>fifth_game</option>
                                     </select>
                                 </td>
                                 <td class="col-2">
